--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@ body {
   font-family: 'Sora', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 
@@ -16,10 +16,13 @@ code {
 #root {
   display: flex;
   justify-content: center;
-  align-items: center
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 #pointer {
+mix-blend-mode: difference;
   position: fixed;
   top: calc(50vh - 15px);
   left: calc(50vw - 15px);
@@ -31,7 +34,7 @@ code {
   pointer-events: none;
   z-index: 9;
   border-radius: 50%;
-  opacity: 0.5;
+  opacity: 0.3;
 }
 
 @keyframes activePointer {
@@ -171,11 +174,11 @@ h2#second-heading {
 
 canvas {
   transition: filter 2s ease;
-  filter: blur(10px);
+  /* filter: blur(10px); */
 }
 
 canvas.cleared {
-  filter: blur(0px);
+  /* filter: blur(0px); */
 }
 
 @keyframes upLidBlink {
