--- a/src/_PhoneVersion/mobile-style.css
+++ b/src/_PhoneVersion/mobile-style.css
@@ -1,32 +1,30 @@
-html, body {
-	background-color: #222;
+html,
+body {
+  background-color: #222;
 }
 body {
-	margin: 0;
-	padding: 0;
-	width: 100vw;
-	height: 100vh;
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
 }
 p {
-	color: white
+  color: white;
 }
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 canvas {
-	width: 100%;
-	height: 100% !important;
+  width: 100%;
+  height: 100% !important;
 }
 #content {
-	z-index: 2;
-	top:0;
-	left:0;
-	width: 100%;
-	height: 100%;
-	padding: 10px;
-	position: absolute;
-}
-h1 {
-	color: red;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  position: absolute;
 }
